2022-12-05T00:31:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3615820731 # 674
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 38 76 / 41 79
* notice: next accum: outdated-unq outdated-all / unq all: 39 77 / 41 79
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-20] / []

2022-12-02T08:08:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3599967644 # 666
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 37 75 / 41 79
* notice: next accum: outdated-unq outdated-all / unq all: 38 76 / 41 79
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-18] / []

2022-12-01T08:08:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3590685841 # 663
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 36 74 / 40 78
* notice: next accum: outdated-unq outdated-all / unq all: 37 75 / 41 79
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-11-17] / [2022-12-01]

2022-11-29T08:08:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3572169239 # 657
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 35 73 / 40 78
* notice: next accum: outdated-unq outdated-all / unq all: 36 74 / 40 78
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-15] / []

2022-11-23T16:08:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3533732973 # 640
* notice: last 14d: unq all: 5 5