@@ -1,3 +1,11 @@
+2022-12-07T16:07:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640649943 # 682
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 39 77 / 41 79
+* notice: next accum: outdated-unq outdated-all / unq all: 40 78 / 41 79
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-23] / []
+
 2022-12-05T00:31:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3615820731 # 674
 * notice: last 14d: unq all: 2 2
